fix: sonar issues (#54)
* fix: sonar issues

* fix: sonar issues